--- a/apps/app-1/css/style.css
+++ b/apps/app-1/css/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body {
-    background-color: #f2f2de;
+    background-color: #f2f2f2;
     font-family: 'Hind Madurai', sans-serif;
 }
 h2 {
