--- a/layouts/layout_1/css/style.css
+++ b/layouts/layout_1/css/style.css
@@ -10,11 +10,12 @@ h1, p {
 }
 body {
     margin: 0;
+    background: #F6F7FA;
 }
 .jumbotron {
     width: 100%;
     height: 100vh;
-    background: url('../pics/jumbo_2.jpeg') 0/cover;
+    background: url('../pics/jumbo_1.jpeg') 0/cover;
     overflow: hidden;
 }
 .container {
@@ -190,7 +191,7 @@ body {
 .jumbotron-2 {
     width: 100%;
     height: 100vh;
-    background: url('../pics/jumbo_1.jpeg') 0/cover;
+    background: url('../pics/jumbo_2.jpeg') 0/cover;
     overflow: hidden;
 }
 .jumbotron-2 .container {
@@ -326,7 +327,8 @@ footer ul li {
         margin-bottom: 50px;
     }
     .reasons {
-        height: 100vh;
+        height: 105vh;
+        .overflow: auto;
     }
     .details h6 {
         padding: 10px 0 0 0;
@@ -347,9 +349,6 @@ footer ul li {
     .start p {
         font-size: 12px;
         line-height: 20px;
-    }
-    .reasons {
-        height: 80vh;
     }
     .solo {
         height: 820px;
@@ -386,9 +385,7 @@ footer ul li {
         width: 100%;
         height: 100%;
     }
-    .reasons {
-        height: 80vh;
-    }
+
     .solo {
         height: 820px;
     }
@@ -412,9 +409,6 @@ footer ul li {
     .jumbotron p {
         transform: translateY(-50px);
     }
-    .reasons {
-        height: 90vh;
-    }
 }
 
 @media (min-width: 321px) and (max-width: 480px) {
@@ -425,6 +419,9 @@ footer ul li {
     .solo .legacy {
         margin-top: 20px;
         padding-bottom: 0;
+    }
+    .reasons {
+        height: 130vh;
     }
     footer {
         height: 800px;
@@ -441,6 +438,9 @@ footer ul li {
     }
     .jumbotron-2 p {
         padding-top: 50px;
+    }
+    .reasons {
+        height: 140vh;
     }
     footer {
         height: 1000px;
