--- a/layouts/layout_2/index.html
+++ b/layouts/layout_2/index.html
@@ -11,12 +11,12 @@
 <header>
   <nav class="container">
     <div class="row">
-		<img src="https://placeholdit.imgix.net/~text?txtsize=8&txt=150%C3%9730&w=150&h=30">
-		<ul>
-			<li><a href=”#”>Link</a></li>
-			<li><a href=”#”>Link</a></li>
-			<li><a href=”#”>Link</a></li>
-		</ul>
+    <img src="https://placeholdit.imgix.net/~text?txtsize=8&txt=150%C3%9730&w=150&h=30">
+    <ul>
+      <li><a href=”#”>Link</a></li>
+      <li><a href=”#”>Link</a></li>
+      <li><a href=”#”>Link</a></li>
+    </ul>
     </div>
   </nav>
 </header>
@@ -29,245 +29,245 @@
       <p>For your</p>
       <p>Witty commercial slogan</p>
     </h1>
-  </div>	
+  </div>  
 </section>
 
 <!-- ADVANTAGES - 3 icons -->
 <section class="advantages">
   <div class="row">
     <div class="col-4 icon-1">
-  	  <i class="fa fa-microchip"></i>
-  	  <h4>MODERN TECHNOLOGY</h4>
-  	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet nisl ullamcorper, mattis justo ut, consectetur est.</p>
+      <i class="fa fa-microchip"></i>
+      <h4>MODERN TECHNOLOGY</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet nisl ullamcorper, mattis justo ut, consectetur est.</p>
     </div>
     <div class="col-4 icon-2">
-  	  <i class="fa fa-handshake-o"></i>
-  	  <h4>COOPERATION</h4>
-  	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet nisl ullamcorper, mattis justo ut, consectetur est.</p>
+      <i class="fa fa-handshake-o"></i>
+      <h4>COOPERATION</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet nisl ullamcorper, mattis justo ut, consectetur est.</p>
     </div>
     <div class="col-4 icon-3">
-  	  <i class="fa fa-globe"></i>
-  	  <h4>GLOBAL SCOPE</h4>
-  	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet nisl ullamcorper, mattis justo ut, consectetur est.</p>
+      <i class="fa fa-globe"></i>
+      <h4>GLOBAL SCOPE</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet nisl ullamcorper, mattis justo ut, consectetur est.</p>
     </div>
   </div>
 </section>
 
   <!-- featured works -->
   <section class="works">
-  	<div class="row">
-  	  <h1>FEATURED WORKS</h1>
-  	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet nisl ullamcorper, mattis justo ut, consectetur est.</p>
-  	</div>
+    <div class="row">
+      <h1>FEATURED WORKS</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet nisl ullamcorper, mattis justo ut, consectetur est.</p>
+    </div>
   </section>
 
   <!-- gallery -->
   <section class="gallery">
 
     <!-- pictures row 1 -->
-  	<div class="row">
+    <div class="row">
 
-	  <div class="col-2 picture">
-	    <div class="layer">
-	      <div class="icons">
-		      <i class="fa fa-camera-retro fa-lg"></i>
-		      <i class="fa fa-search fa-lg"></i>
-		    </div>
-	    </div>
-		<img src="https://images.pexels.com/photos/349700/pexels-photo-349700.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt="pic1">
-	  </div>
+    <div class="col-2 picture">
+      <div class="layer">
+        <div class="icons">
+          <i class="fa fa-camera-retro fa-lg"></i>
+          <i class="fa fa-search fa-lg"></i>
+        </div>
+      </div>
+    <img src="pics/pic-1.jpeg" alt="pic1">
+    </div>
 
-	  <div class="col-2 picture">
-	    <div class="layer">
-	      <div class="icons">
-		      <i class="fa fa-camera-retro fa-lg"></i>
-		      <i class="fa fa-search fa-lg"></i>
-		    </div>
-	    </div>
-  	    <img src="https://images.pexels.com/photos/327124/pexels-photo-327124.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt="pic2">
-  	  </div>
-	    
-	  <div class="col-2 picture">
-		  <div class="layer">
-		    <div class="icons">
-		      <i class="fa fa-camera-retro fa-lg"></i>
-		      <i class="fa fa-search fa-lg"></i>
-		    </div>
-	    </div>
-  	    <img src="https://images.pexels.com/photos/34088/pexels-photo.jpg?w=940&h=650&auto=compress&cs=tinysrgb" alt="pic3">
-	  </div>
-		
-	  <div class="col-2 picture">
-		  <div class="layer">
-		    <div class="icons">
-		      <i class="fa fa-camera-retro fa-lg"></i>
-		      <i class="fa fa-search fa-lg"></i>
-		    </div>
-	    </div>
-  	    <img src="https://images.pexels.com/photos/280264/pexels-photo-280264.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt="pic4">
-	  </div>
+    <div class="col-2 picture">
+      <div class="layer">
+        <div class="icons">
+          <i class="fa fa-camera-retro fa-lg"></i>
+          <i class="fa fa-search fa-lg"></i>
+        </div>
+      </div>
+        <img src="pics/pic-2.jpeg" alt="pic2">
+      </div>
+      
+    <div class="col-2 picture">
+      <div class="layer">
+        <div class="icons">
+          <i class="fa fa-camera-retro fa-lg"></i>
+          <i class="fa fa-search fa-lg"></i>
+        </div>
+      </div>
+        <img src="pics/pic-3.jpg" alt="pic3">
+    </div>
+    
+    <div class="col-2 picture">
+      <div class="layer">
+        <div class="icons">
+          <i class="fa fa-camera-retro fa-lg"></i>
+          <i class="fa fa-search fa-lg"></i>
+        </div>
+      </div>
+        <img src="pics/pic-4.jpeg" alt="pic4">
+    </div>
 
-	  <div class="col-4 picture">
-		  <div class="layer">
-		    <div class="icons">
-		      <i class="fa fa-camera-retro fa-lg"></i>
-		      <i class="fa fa-search fa-lg"></i>
-		    </div>
-	    </div>
-  	    <img src="https://images.pexels.com/photos/270700/pexels-photo-270700.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt="pic5">
-	  </div>
+    <div class="col-4 picture">
+      <div class="layer">
+        <div class="icons">
+          <i class="fa fa-camera-retro fa-lg"></i>
+          <i class="fa fa-search fa-lg"></i>
+        </div>
+      </div>
+        <img src="pics/pic-5.jpeg" alt="pic5">
+    </div>
 
-  	</div> <!-- row 1 end -->
+    </div> <!-- row 1 end -->
 
-	<!-- pictures row 2 -->
-  	<div class="row">
+  <!-- pictures row 2 -->
+    <div class="row">
 
-	  <div class="col-4 picture">
-	    <div class="layer">
-	      <div class="icons">
-		      <i class="fa fa-camera-retro fa-lg"></i>
-		      <i class="fa fa-search fa-lg"></i>
-		    </div>
-	    </div>
-  	    <img src="https://images.pexels.com/photos/34088/pexels-photo.jpg?w=940&h=650&auto=compress&cs=tinysrgb" alt="pic6">
-	  </div>
+    <div class="col-4 picture">
+      <div class="layer">
+        <div class="icons">
+          <i class="fa fa-camera-retro fa-lg"></i>
+          <i class="fa fa-search fa-lg"></i>
+        </div>
+      </div>
+        <img src="pics/pic-3.jpg" alt="pic6">
+    </div>
 
-	  <div class="col-2 picture">
-	    <div class="layer">
-	      <div class="icons">
-		      <i class="fa fa-camera-retro fa-lg"></i>
-		      <i class="fa fa-search fa-lg"></i>
-		    </div>
-	    </div>
-  		<img src="https://images.pexels.com/photos/349700/pexels-photo-349700.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt="pic7">
-	  </div>
+    <div class="col-2 picture">
+      <div class="layer">
+        <div class="icons">
+          <i class="fa fa-camera-retro fa-lg"></i>
+          <i class="fa fa-search fa-lg"></i>
+        </div>
+      </div>
+      <img src="pics/pic-7.jpeg" alt="pic7">
+    </div>
 
-	  <div class="col-2 picture">
-	    <div class="layer">
-	      <div class="icons">
-		      <i class="fa fa-camera-retro fa-lg"></i>
-		      <i class="fa fa-search fa-lg"></i>
-		    </div>
-	    </div>
-  	    <img src="https://images.pexels.com/photos/34088/pexels-photo.jpg?w=940&h=650&auto=compress&cs=tinysrgb" alt="pic8">
-	  </div>
+    <div class="col-2 picture">
+      <div class="layer">
+        <div class="icons">
+          <i class="fa fa-camera-retro fa-lg"></i>
+          <i class="fa fa-search fa-lg"></i>
+        </div>
+      </div>
+        <img src="pics/pic-3.jpg" alt="pic8">
+    </div>
 
-	  <div class="col-2 picture">
-	    <div class="layer">
-	      <div class="icons">
-		      <i class="fa fa-camera-retro fa-lg"></i>
-		      <i class="fa fa-search fa-lg"></i>
-		    </div>
-	    </div>
-  	    <img src="https://images.pexels.com/photos/327124/pexels-photo-327124.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt="pic9">
-	  </div>
+    <div class="col-2 picture">
+      <div class="layer">
+        <div class="icons">
+          <i class="fa fa-camera-retro fa-lg"></i>
+          <i class="fa fa-search fa-lg"></i>
+        </div>
+      </div>
+        <img src="pics/pic-2.jpeg" alt="pic9">
+    </div>
 
-	  <div class="col-2 picture">
-	    <div class="layer">
-	      <div class="icons">
-		      <i class="fa fa-camera-retro fa-lg"></i>
-		      <i class="fa fa-search fa-lg"></i>
-		    </div>
-	    </div>
-  	    <img src="https://images.pexels.com/photos/280264/pexels-photo-280264.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt="pic10">
-	  </div>
+    <div class="col-2 picture">
+      <div class="layer">
+        <div class="icons">
+          <i class="fa fa-camera-retro fa-lg"></i>
+          <i class="fa fa-search fa-lg"></i>
+        </div>
+      </div>
+        <img src="pics/pic-4.jpeg" alt="pic10">
+    </div>
 
-  	</div> <!-- row 1 end -->
+    </div> <!-- row 1 end -->
   </section> <!-- gallery end -->
   
   <!-- pictures of workers -->
   <section class="workers">
-  	<div class="row">
-  		<div class="col-3">
-  			<div class="person">
-  			  <i class="fa fa-user"></i>
-  			</div>
-  		</div>
-  		<div class="col-3">
-  			<div class="person">
-  			  <i class="fa fa-user"></i>
-  			</div>
-  		</div>
-  		<div class="col-3">
-  			<div class="person">
-  			  <i class="fa fa-user"></i>
-  			</div>
-  		</div>
-  		<div class="col-3">
-  			<div class="person">
-  			  <i class="fa fa-user"></i>
-  			</div>
-  		</div>
-  	</div>
+    <div class="row">
+      <div class="col-3">
+        <div class="person">
+          <i class="fa fa-user"></i>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="person">
+          <i class="fa fa-user"></i>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="person">
+          <i class="fa fa-user"></i>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="person">
+          <i class="fa fa-user"></i>
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- workers names -->
   <section class="names">
-  	<div class="row">
-  	  <div class="col-3 name-1">
-  	  	<h3>John Smith</h3>
-  	  </div>
-  	  <div class="col-3 name-2">
-  	  	<h3>Andrew Howes</h3>
-  	  </div>
-  	  <div class="col-3 name-3">
-  	  	<h3>Anna Willis</h3>
-  	  </div>
-  	  <div class="col-3 name-4">
-  	  	<h3>Stephen Morris</h3>
-  	  </div>
-  	</div>
+    <div class="row">
+      <div class="col-3 name-1">
+        <h3>John Smith</h3>
+      </div>
+      <div class="col-3 name-2">
+        <h3>Andrew Howes</h3>
+      </div>
+      <div class="col-3 name-3">
+        <h3>Anna Willis</h3>
+      </div>
+      <div class="col-3 name-4">
+        <h3>Stephen Morris</h3>
+      </div>
+    </div>
   </section>
 
   <!-- section 'AWESOME TITLE' with a picture -->
   <section class="awesome-title">
-  	
-  	<div class="box-left">
-  	  <div class="photo">
-  	  	<img src="https://images.pexels.com/photos/92902/pexels-photo-92902.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt="photo">
-  	  </div>
-  	</div>
-	
-	<div class="box-right">
-	  <div class="row">
-	    <div class="col-12">
-	    	<h1>Your awesome title</h1>
-	    </div>
-	  </div>
-	  <div class="row">
-	  	<div class="col-8">
-	  		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi molestie semper elit et condimentum. Cras semper enim nisi, non tempor purus faucibus ac. Praesent scelerisque turpis efficitur arcu ornare, eget eleifend orci ornare. In sollicitudin ornare ante, vitae mattis lorelobortis nec. Vivamus pharetra neque eget erat rhoncus, fermentum ipsum fringilla.</p>
-	  	</div>
-	  	<div class="col-4">
-	  		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi molestie semper elit et condimentum. Cras semper enim nisi, non tempor purus faucibus.</p>
-	  	</div>
-	  </div>
-	</div>
-	
+    
+    <div class="box-left">
+      <div class="photo">
+        <img src="https://images.pexels.com/photos/92902/pexels-photo-92902.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt="photo">
+      </div>
+    </div>
+  
+  <div class="box-right">
+    <div class="row">
+      <div class="col-12">
+        <h1>Your awesome title</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-8">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi molestie semper elit et condimentum. Cras semper enim nisi, non tempor purus faucibus ac. Praesent scelerisque turpis efficitur arcu ornare, eget eleifend orci ornare. In sollicitudin ornare ante, vitae mattis lorelobortis nec. Vivamus pharetra neque eget erat rhoncus, fermentum ipsum fringilla.</p>
+      </div>
+      <div class="col-4">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi molestie semper elit et condimentum. Cras semper enim nisi, non tempor purus faucibus.</p>
+      </div>
+    </div>
+  </div>
+  
   </section>
-	
+  
 
   <!-- numbers -->
   <section class="numbers">
-	<div class="container">
-  	<div class="row">
-  	  <div class="col-3">
-  	  	<h1>455</h1>
-  	  	<h4>Followers</h4>
-  	  </div>
-  	  <div class="col-3">
-  	    <h1>1991</h1>
-  	    <h4>Since</h4>
-  	  </div>
-  	  <div class="col-3">
-  	  	<h1>806</h1>
-  	  	<h4>Happy clients</h4>
-  	  </div>
-  	  <div class="col-3">
-  	  	<h1>923</h1>
-  	  	<h4>Projects</h4>
-  	  </div>
-  	</div>
+  <div class="container">
+    <div class="row">
+      <div class="col-3">
+        <h1>455</h1>
+        <h4>Followers</h4>
+      </div>
+      <div class="col-3">
+        <h1>1991</h1>
+        <h4>Since</h4>
+      </div>
+      <div class="col-3">
+        <h1>806</h1>
+        <h4>Happy clients</h4>
+      </div>
+      <div class="col-3">
+        <h1>923</h1>
+        <h4>Projects</h4>
+      </div>
+    </div>
   </div>
   </section>
 
@@ -277,78 +277,78 @@
     <footer class="container">
 
       <div class="row first-row">
-      	<div class="col-4">
-      		<h2>About us</h2>
-      	</div>
-      	<div class="col-4">
-      		<h2>Get in touch</h2>
-      	</div>
-      	<div class="col-4">
-      		<h2>Social media</h2>
-      	</div>
+        <div class="col-4">
+          <h2>About us</h2>
+        </div>
+        <div class="col-4">
+          <h2>Get in touch</h2>
+        </div>
+        <div class="col-4">
+          <h2>Social media</h2>
+        </div>
       </div>
 
       <div class="row second-row">
 
-      	<div class="col-4">
-      		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi molestie semper elit et condimentum. Cras semper enim nisi, non tempor purus faucibus ac.</p>
-      	</div>
+        <div class="col-4">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi molestie semper elit et condimentum. Cras semper enim nisi, non tempor purus faucibus ac.</p>
+        </div>
 
-      	<div class="col-4"> <!-- nested rows in row 2 column 2 -->
+        <div class="col-4"> <!-- nested rows in row 2 column 2 -->
 
-      		<div class="row row-in-row">
-      			<div class="col-3 col-left">
-      				<h3>Address:</h3>
-      			</div>
-      			<div class="col-9 col-right">
-      				<p>66 South Street,<br>
-      				Window 6, Wonderland</p>
-      			</div>
-      		</div>
-      	
-       		<div class="row row-in-row">
-			     <div class="col-3 col-left">
-			  	    <h3>Phone:</h3>
-			     </div>
-			     <div class="col-9 col-right">
-			  	    <p>+440 846284634<br>
-      			+440 584298753</p>
-			     </div>
-      	  </div>
+          <div class="row row-in-row">
+            <div class="col-3 col-left">
+              <h3>Address:</h3>
+            </div>
+            <div class="col-9 col-right">
+              <p>66 South Street,<br>
+              Window 6, Wonderland</p>
+            </div>
+          </div>
+        
+          <div class="row row-in-row">
+           <div class="col-3 col-left">
+              <h3>Phone:</h3>
+           </div>
+           <div class="col-9 col-right">
+              <p>+440 846284634<br>
+            +440 584298753</p>
+           </div>
+          </div>
 
-      		<div class="row row-in-row">
-			      <div class="col-3 col-left">
-			  	   <h3>Email:</h3>
-			      </div>
-			      <div class="col-9 col-right">
-			  	   <p>freepik@sitename.com</p>
-			      </div>
-      		</div>
+          <div class="row row-in-row">
+            <div class="col-3 col-left">
+             <h3>Email:</h3>
+            </div>
+            <div class="col-9 col-right">
+             <p>freepik@sitename.com</p>
+            </div>
+          </div>
 
-      	</div>  <!-- end of nested rows-->
+        </div>  <!-- end of nested rows-->
 
-      	<div class="col-4">
-      	  <p>Lorem ipsum is simply dummy text of the printing and typesetting industry.</p>
-      	    <div class="icons">
-      		  <i class="fa fa-youtube"></i>
-      		  <i class="fa fa-google-plus"></i>
-      		  <i class="fa fa-facebook"></i>
-      		  <i class="fa fa-dribbble"></i>
-      		  <i class="fa fa-twitter"></i>
-      		  <i class="fa fa-instagram"></i>
-      		</div>
-      	</div>
+        <div class="col-4">
+          <p>Lorem ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <div class="icons">
+            <i class="fa fa-youtube"></i>
+            <i class="fa fa-google-plus"></i>
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-dribbble"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-instagram"></i>
+          </div>
+        </div>
 
       </div>
     </footer>
 </section>
 
 <section class="bottom">
-	<div class="row">
-		<div class="col-12">
-			<h4>Copyright 2017</h4>
-		</div>
-	</div>
+  <div class="row">
+    <div class="col-12">
+      <h4>Copyright 2017</h4>
+    </div>
+  </div>
 </section>  
 
 </body>
