--- a/layouts/layout_2/index.html
+++ b/layouts/layout_2/index.html
@@ -224,7 +224,7 @@
     
     <div class="box-left">
       <div class="photo">
-        <img src="https://images.pexels.com/photos/92902/pexels-photo-92902.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt="photo">
+        <img src="pics/awesome-title.jpeg" alt="photo">
       </div>
     </div>
   
